--- a/AUTHORS
+++ b/AUTHORS
@@ -112,3 +112,4 @@ Frozenlock <frozenlock@gmail.com>
 Sudeep Mandal <sudeep@covar.com>
 Davide Arcuri <dadokkio@gmail.com>
 Lou Moxy <louisemoxy@gmail.com>
+Sven Hertling <svenhertling@t-online.de>
