author, changelog, version

--- a/AUTHORS
+++ b/AUTHORS
@@ -113,3 +113,4 @@ Sudeep Mandal <sudeep@covar.com>
 Davide Arcuri <dadokkio@gmail.com>
 Lou Moxy <louisemoxy@gmail.com>
 Sven Hertling <svenhertling@t-online.de>
+Tahirhan Yıldızoğlu <tahirhanyildizoglu3@gmail.com>
