author and changelog

--- a/AUTHORS
+++ b/AUTHORS
@@ -117,3 +117,4 @@ Tahirhan Yıldızoğlu <tahirhanyildizoglu3@gmail.com>
 hofmeister <the3ver+github@gmail.com>
 German Priks <germanpriks@gmail.com>
 Maxime Rouyrre <max@openbloc.fr>
+BERÉNYI Attila <aberenyi@gislab.hu>
