--- a/AUTHORS
+++ b/AUTHORS
@@ -118,3 +118,4 @@ hofmeister <the3ver+github@gmail.com>
 German Priks <germanpriks@gmail.com>
 Maxime Rouyrre <max@openbloc.fr>
 BERÉNYI Attila <aberenyi@gislab.hu>
+Patrik Kullman <patrik.kullman@gmail.com>
