Add Shawn Pacarar

--- a/AUTHORS
+++ b/AUTHORS
@@ -115,3 +115,4 @@ Lou Moxy <louisemoxy@gmail.com>
 Sven Hertling <svenhertling@t-online.de>
 Tahirhan Yıldızoğlu <tahirhanyildizoglu3@gmail.com>
 hofmeister <the3ver+github@gmail.com>
+Shawn Pacarar <spacarar@hotmail.com>
